feature/0009:: Improve user view
